<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">voiceAlarm</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_record">Record</string>
    <string name="rec_start">Start Recording</string>
    <string name="rec_stop">Stop Recording</string>
    <string name="alarm_status">Alarm</string>
    <string name="play">Play</string>
    <string name="sel_time">Pick Time</string>
    <string name="sel_day">Repeat</string>
    <string name="title_activity_time_select">TimeSelect</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="del_alarm">Delete Alarm</string>
    <string name="title_activity_alarm_alert">Alarm</string>
    <string name="dismiss">Dismiss</string>

</resources>
