<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Record" >

    <Switch
        android:id="@+id/alarm_status_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_status" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/alarm_status"
        android:orientation="horizontal" >
    </LinearLayout>

    <Button
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="playRecord"
        android:text="@string/play" />

    <Button
        android:id="@+id/rec_start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startRecord"
        android:text="@string/rec_start" />

    <Button
        android:id="@+id/rec_stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="stopRecord"
        android:text="@string/rec_stop" />

</LinearLayout>